changed static file hosting to s3

--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 <!-- START PAGE 1 -->
-<div class="page full-height col-2 col-1-sm" id="page1">
+<div class="page full-height col-2 col-1-sm" id="page1" style="background-image: url({% static 'img/wave.svg' %})">
     <div id="landing-text-wrapper">
         <div>
             <h1>Take a byite out of something new.</h1>
@@ -25,7 +25,7 @@
 <!-- END PAGE 1 -->
 
 <!-- START PAGE 2 -->
-<div class="page full-height col-2 col-1-sm" id=page2>
+<div class="page full-height col-2 col-1-sm" id=page2 style="background-image: url({% static 'img/watermarks.svg' %})">
     <div id="capabilities-logos">
         <div class="capability">
             <div class="capability-text"><strong>AWS cloud</strong></div>
@@ -72,7 +72,7 @@
 <!-- END PAGE 2 -->
 
 <!-- START PAGE 3 -->
-<div class="page col-2 col-1-sm full-height" id="page3">
+<div class="page col-2 col-1-sm full-height" id="page3" style="background-image: url({% static 'img/projects1.svg' %})">
     <div id="project-text-container">
         <h1 id="projects-title">Our work</h1>
         {% for project in projects %}
@@ -107,7 +107,7 @@
 <!-- END PAGE 3 -->
 
 <!-- START PAGE 4 -->
-<div class="page col-2 col-1-sm full-height" id="page4">
+<div class="page col-2 col-1-sm full-height" id="page4" style="background-image: url({% static 'img/contact-us.svg' %})">
     <div class="hidden-md">
         
     </div>
