--- a/blogs/templates/blogs/blog_list.html
+++ b/blogs/templates/blogs/blog_list.html
@@ -7,7 +7,7 @@
 {% endblock scripts %}
 
 {% block content %}
-<div class="blog-list-header-container page page-padded flex-y">
+<div class="blog-list-header-container page page-padded flex-y" style="background-image: url({% static 'img/cookie-watermark-left.png' %})">
     <div class="blog-header w-100 m-t-xxl">
         <div class="center-content-y center-content-xy-sm">
             <div class="text-center-sm">
@@ -24,7 +24,7 @@
                             <img class="blog-card-img" src="{{ blogs.0.thumbnail.url }}"/>
                         </div>
                         <div class="blog-card-text-container flex-y">
-                            <div class="blog-card-header-container">
+                        <div class="blog-card-header-container">
                                 <div class="blog-card-header">
                                     <small>{{ blogs.0.author_name }}</small>
                                     {% if blogs.0.published %}
