v1 of image handler app

--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -40,12 +40,12 @@
             <div class="capability-logo-container"><img class="capability-logo" src="{% static 'img/django_logo.svg' %}"/></div>
         </div>
         <div class="capability">
-            <div class="capability-text"><strong>Postgres</strong></div>
+            <div class="capability-text"><strong>Postgres Databases</strong></div>
             <div class="capability-logo-container"><img class="capability-logo" src="{% static 'img/postgres-logo.svg' %}"/></div>
         </div>
         <div class="capability">
-            <div class="capability-text"><strong>Github</strong></div>
-            <div class="capability-logo-container"><img class="capability-logo" src="{% static 'img/github-logo.svg' %}"/></div>
+            <div class="capability-text"><strong>Vue.js</strong></div>
+            <div class="capability-logo-container"><img class="capability-logo" src="{% static 'img/vuejs-logo.svg' %}"/></div>
         </div>
         <div class="capability">
             <div class="capability-text"><strong>Javascript</strong></div>
@@ -60,7 +60,7 @@
             <div class="capability-logo-container"><img class="capability-logo" src="{% static 'img/cc-logo.svg' %}"/></div>
         </div>
         <div class="capability">
-            <div class="capability-text"><strong>Ubuntu</strong></div>
+            <div class="capability-text"><strong>Ubuntu servers</strong></div>
             <div class="capability-logo-container"><img class="capability-logo" src="{% static 'img/ubuntu-logo.svg' %}"/></div>
         </div>
     </div>
