--- a/imageit/static/imageit/css/scaleit.css
+++ b/imageit/static/imageit/css/scaleit.css
@@ -3,7 +3,7 @@
 }
 
 .imageit-upload{
-    width: calc(100% - 2rem);
+    width: calc(100% - 2rem - 4px);
     padding:1rem;
     height: auto;
     min-height: 125px;
@@ -14,15 +14,28 @@
     background-color:rgba(73, 164, 209, 0.03);
     border: 2px dashed rgba(73, 164, 209,0.4);
     border-radius:7px;
+    transition: all 0.2s ease-in;
+}
+
+.imageit-upload.active{
+    background-color:rgba(73, 164, 209, 0.1);
+    border: 2px dashed rgba(73, 164, 209,0.7);
+}
+
+.imageit-upload-prompt{
+    display:flex;
+    flex-direction:column;
+    align-items: center;
+    justify-content: center;
+}
+
+.imageit-upload-prompt div{
+    padding: 0px;
+    margin: .3rem 0px;
 }
 
 .imageit-upload-icon{
     width:3rem;
-}
-
-.imageit-upload div{
-    padding: 0px;
-    margin: .3rem 0px;
 }
 
 .imageit-browse-files{
@@ -33,26 +46,36 @@
     color:white;
 }
 
-.imageit-upload.active{
-    background-color:rgba(73, 164, 209, 0.1);
-    border: 2px dashed rgba(73, 164, 209,0.7);
+/* Hidden element used as template */
+#imageit-preview{
+    display:none;
 }
 
-.imageit-initial{
+.imageit-preview{
+    max-width: calc(100% - 2rem);
+    margin: 1rem 0px;
+    padding: 1rem;
+}
+
+.imageit-preview-content{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: calc(100% - 2rem);
-    padding: 1rem;
-    min-height: 50px;
-    max-height: 150px;
-    margin-top: 1rem;
-    box-shadow: 2px 2px 6px rgba(0,0,0,0.4);
+    min-height: 75px;
 }
 
-.imageit-intial-image{
-    max-width:33.3%;
+.imageit-preview-text{
+    padding: 0px 1rem;
+}
+
+.imageit-preview-text p{
+    word-break: break-all;
+}
+
+.imageit-preview-image{
+    max-width:150px;
     max-height:150px;
+    box-shadow: 2px 2px 5px rgba(0,0,0,0.4);
 }
 
 .imageit-clear-image{
@@ -61,8 +84,8 @@
     justify-content: center;
     width: 2rem;
     height: 2rem;
-    background-color: #ff3466;
-    color: white;
+    /*background-color: #ff3466;*/
+    color: #ff3466;
     border: 2px solid #ff3466;
     border-radius: 50%;
     cursor: pointer;
@@ -71,70 +94,14 @@
 .imageit-text-light{
     color: #a4b7bd;
 }
-/*
-.imageit-container{
-    width:100%;
-    display:flex;
-    align-items:center;
-}
-
-
-.imageit-initial{
-    max-width:66.6%;
-    max-height:350px;
-    margin:10px;
-}
-
-.imageit-initial-text{
-    position:absolute;
-    bottom:0px;
-    left:0px;
-    right:0px;
-    padding-top:5px;
-    padding-bottom:5px;
-    text-align:center;
-    color:black;
-    background-color: rgba(255, 255, 255, 0.3);
-    overflow:hidden;
-}
-
-.imageit-upload{
-    margin:10px;
-}
-
-
-
-.imageit-initial-image-container{
-    position:relative;
-}
-
-.imageit-initial-image{
-    display:block;
-    max-width:100%;
-    max-height:100%;
-}
-
-.imageit-clear-image{
-    position: absolute;
-    display:table;
-    top: 0px;
-    right: 0px;
-    height: 1.5rem;
-    width: 1.5rem;
-    padding: 5px;
-    line-height:1.5rem;
-    text-align: center;
-    font-size: 1.5rem;
-    cursor: pointer;
-    border-bottom-left-radius: 5px;
-    background-color: rgba(255, 255, 255, 0.3)
-}
-.imageit-clear-image span{
-    display:table-cell;
-    vertical-align: middle;
-}
 
 .imageit-inactive{
-    display:none;
+    display: none;
 }
-*/
+
+.imageit-error{
+    width: 100%;
+    padding: 1rem 0px;
+    text-align: center;
+    color: #ff3466;
+}
