--- a/imageit/templates/imageit/widgets/crop_it_widget.html
+++ b/imageit/templates/imageit/widgets/crop_it_widget.html
@@ -1,2 +1,8 @@
-
-{% spaceless %}HEYHEYHEYEHEY{% for widget in widget.subwidgets %}{% include widget.template_name %}{% endfor %}{% endspaceless %}
+<div class="imageit-container">
+    {% spaceless %}
+        {% for widget in widget.subwidgets %}
+            {% include widget.template_name %}
+        {% endfor %}
+    {% endspaceless %}
+    <!--initialise crop on change of input-->
+</div>
