--- a/blogs/templates/blogs/blog_list.html
+++ b/blogs/templates/blogs/blog_list.html
@@ -21,7 +21,7 @@
                     <div class="blog-card-highlight">
                         <div class="blog-card-img-container center-content-xy">
                             <div class="blog-card-img-overlay"></div>
-                            <img class="blog-card-img" src="{{ blogs.0.thumbnail.url }}"/>
+                            <img class="blog-card-img" src="{% if blogs.0.thumbnail %}{{ blogs.0.thumbnail.url }}{% endif %}"/>
                         </div>
                         <div class="blog-card-text-container flex-y">
                         <div class="blog-card-header-container">
@@ -71,7 +71,7 @@
             <div class="blog-card">
                 <div class="blog-card-img-container center-content-xy">
                     <div class="blog-card-img-overlay"></div>
-                    <img class="blog-card-img" src="{{ blog.thumbnail.url }}"/>
+                    <img class="blog-card-img" src="{% if blog.thumbnail %}{{ blog.thumbnail.url }}{% endif %}"/>
                 </div>
                 <div class="blog-card-text-container flex-y">
                     <div class="blog-card-header-container">
