--- a/imageit/templates/imageit/widgets/crop_it_widget.html
+++ b/imageit/templates/imageit/widgets/crop_it_widget.html
@@ -1,7 +1,7 @@
-
+<div class="imageit-cropit-container">
     {% spaceless %}
         {% for widget in widget.subwidgets %}
             {% include widget.template_name %}
         {% endfor %}
     {% endspaceless %}
-    <!--initialise crop on change of input-->
+</div>
