--- a/imageit/templates/imageit/widgets/scale_it_widget.html
+++ b/imageit/templates/imageit/widgets/scale_it_widget.html
@@ -1,37 +1,30 @@
-<div class="imageit-container">
-    <div class="imageit-upload" data-type="{{ widget.type }}" data-name="{{ widget.name }}" {% if widget.attrs.multiple %}data-multiple="multiple"{% endif %} {% include "django/forms/widgets/attrs.html" %}>
-        <div class="imageit-upload-prompt">
-            <div><img class="imageit-upload-icon" src="/static/imageit/img/image-icon.svg"/></div>
-            <div>Drag & Drop</div>
-            <div class="imageit-text-light"> or </div>
-            <div><button type="button" class="imageit-browse-files">Browse Files</button></div>    
-        </div>
-        <div class="imageit-preview-container">
-            {% if widget.is_initial %}
-            <div class="imageit-preview imageit-initial">
-                <div class="imageit-preview-content">
-                    <a href="{{ widget.value.url }}" target="_blank">
-                        <img class="imageit-preview-image" alt="Image preview" src="{{ widget.value.url }}" />
-                    </a>
-                    <div class="imageit-preview-text">
-                        <p>
-                            <strong class="imageit-preview-help-text">{{ widget.initial_text }}</strong>
-                        </p>
-                        <hr>
-                        <p class="imageit-preview-filename">
-                            {{ widget.value.file.name }}
-                        </p>
-                    </div>
-                    {% if not widget.required %}
-                        <div>
-                            <div class="imageit-clear-image" title="{{ widget.clear_checkbox_label }}" data-checkboxname="{{ widget.checkbox_name }}"><span>x</span></div>
-                            <input hidden type="checkbox" name="{{ widget.checkbox_name }}" id="{{ widget.checkbox_id }}"{% if widget.attrs.disabled %} disabled{% endif %}>
-                        </div>
-                    {% endif %}
-                    <!--<input hidden type="{{ widget.type }}" name="{{ widget.name }}"{% include "django/forms/widgets/attrs.html" %}>-->
+<div class="imageit-container imageit-scaleit-container">
+    <div class="imageit-file-select-container">
+        <label class="imageit-pseudo-selector" {% if widget.attrs.id %}for="{{widget.attrs.id}}"{% endif %}><img class="imageit-selector-icon" src="/static/imageit/img/folder.svg"/>Choose file</label>
+        <input class="imageit-selector" type="{{ widget.type }}" name="{{ widget.name }}" {% include "django/forms/widgets/attrs.html" %}>
+    </div>
+    <div class="imageit-preview-container">
+        {% if widget.is_initial %}
+            <div class="imageit-preview-general imageit-preview imageit-initial">
+                <a href="{{ widget.value.url }}" target="_blank">
+                    <img class="imageit-preview-image" alt="Image preview" src="{{ widget.value.url }}" />
+                </a>
+                <div class="imageit-preview-text">
+                    <p>
+                        <strong class="imageit-preview-help-text">{{ widget.initial_text }}</strong>
+                    </p>
+                    <hr>
+                    <p class="imageit-preview-filename">
+                        {{ widget.value.file.name }}
+                    </p>
                 </div>
+                {% if not widget.required %}
+                    <div>
+                        <div class="imageit-clear-image" title="{{ widget.clear_checkbox_label }}" data-checkboxname="{{ widget.checkbox_name }}"><span>x</span></div>
+                        <input class="imageit-clear-image-checkbox" hidden type="checkbox" name="{{ widget.checkbox_name }}" id="{{ widget.checkbox_id }}"{% if widget.attrs.disabled %} disabled{% endif %}>
+                    </div>
+                {% endif %}
             </div>
         {% endif %}
-        </div>
     </div>
 </div>
