--- a/dropzoneit/static/dropzoneit/css/dropzoneit.css
+++ b/dropzoneit/static/dropzoneit/css/dropzoneit.css
@@ -1,10 +1,11 @@
-.imageit-container{
+.dropzoneit-container{
     width:100%;
+    margin: 1rem 0px;
 }
 
-.imageit-upload{
+.dropzoneit{
     width: calc(100% - 2rem - 4px);
-    padding:1rem;
+    padding:1rem 1rem 0px;
     height: auto;
     min-height: 125px;
     display:flex;
@@ -17,106 +18,113 @@
     transition: all 0.2s ease-in;
 }
 
-.imageit-upload.imageit-active{
+.dropzoneit.dropzoneit-active{
     background-color:rgba(73, 164, 209, 0.1);
     border: 2px dashed rgba(73, 164, 209,0.7);
 }
 
-.imageit-upload-prompt{
+.dropzoneit-upload-prompt{
     display:flex;
     flex-direction:column;
     align-items: center;
     justify-content: center;
 }
 
-.imageit-upload-prompt div{
-    padding: 0px;
-    margin: .3rem 0px;
-}
-
-.imageit-upload-icon{
+.dropzoneit-upload-icon{
     width:3rem;
 }
 
-.imageit-browse-files{
+.dropzoneit-upload-prompt div{
+    padding: 0px;
+    margin: .2rem 0px;
+}
+
+.dropzoneit-preview{
+    max-width: 100%;
+    margin: 1.5rem 0px;
+    padding: 0px .5rem;
+}
+
+.dropzoneit-file-selector{
+    display:none;
+}
+
+.dropzoneit-file-pseudo-selector{
+    display: block;
     padding: .5rem 1.5rem;
     background-color: rgb(121, 174, 200);
     border: 1px solid rgb(73, 164, 209);
     border-radius: 2px;
     color:white;
+    cursor:pointer;
 }
 
-/* Hidden element used as template */
-#imageit-preview{
-    display:none;
-}
-
-.imageit-preview{
-    max-width: calc(100% - 2rem);
-    margin: 1rem 0px;
-    padding: 1rem;
-}
-
-.imageit-preview-content{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.dropzoneit-preview-content{
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
     min-height: 75px;
 }
 
-.imageit-preview-text{
-    flex-grow: 1;
-    padding: 0px 1rem;
-}
-
-.imageit-preview-text p{
-    word-break: break-all;
-}
-
-.imageit-preview-image{
-    max-width:150px;
-    max-height:150px;
+.dropzoneit-preview-image{
+    object-fit: cover;
+    width:7.5rem;
+    height:6.5rem;
     box-shadow: 2px 2px 5px rgba(0,0,0,0.4);
 }
 
-.imageit-clear-image{
+.dropzoneit-preview-text{
+    flex-grow: 1;
+    flex-shrink: 100;
+    padding: 0px 1rem;
+}
+
+.dropzoneit-preview-filename{
+    margin: 0px;
+    word-break: break-all;
+}
+
+.dropzoneit-delete-file{
     display: flex;
     align-items: center;
     justify-content: center;
     width: 2rem;
     height: 2rem;
-    /*background-color: #ff3466;*/
+    margin-left:1rem;
     color: #ff3466;
-    border: 2px solid #ff3466;
+    border: 1px solid #ff3466;
     border-radius: 50%;
     cursor: pointer;
 }
 
-.imageit-text-light{
-    color: #a4b7bd;
+.dropzoneit-delete-file img{
+    width: 1rem;
+    height: 1rem;
 }
 
-.imageit-inactive{
-    display: none;
-}
-
-.imageit-error{
+.dropzoneit-loading-container{
+    height: 1.5rem;
     width: 100%;
-    padding: 1rem 0px;
-    text-align: center;
-    color: #ff3466;
+    border-radius: 1rem;
+    overflow: hidden;
+    border: 1px solid rgb(73, 164, 209);
 }
 
+.dropzoneit-loading-bar{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    height:100%;
+    background-color: rgb(121, 174, 200);
+    color: white;
+}
 
-
-
-
-.loading{
+.dropzoneit-loading{
     position:relative;
     opacity:0.5;
  }
  
- .loading::before{
+ .dropzoneit-loading::before{
     content: '';
     position:absolute;
     display:flex;
@@ -127,7 +135,7 @@
     border-radius:5px;
  }
 
-.loading::after{
+.dropzoneit-loading::after{
     position:absolute;
     top:calc(50% - 35px);
     left:calc(50% - 35px);
@@ -154,4 +162,15 @@
 }
 75% { border-width: 3px;}
 100% { border-width: 10px; border-top-color: yellow; border-right-color: yellow;}
+}
+
+.dropzoneit-text-light{
+    color: #a4b7bd;
+}
+
+.dropzoneit-error{
+    width: 100%;
+    padding: 1rem 0px;
+    text-align: center;
+    color: #ff3466;
 }
