--- a/imageit/static/imageit/css/imageit.css
+++ b/imageit/static/imageit/css/imageit.css
@@ -1,19 +1,86 @@
-/* SCALEIT STYLES */
-.imageit-preview-container{
-    max-width: calc(100% - 2rem);
-    margin: 1.5rem 0px;
-    padding: 0px 1rem;
+/* GENERAL STYLES */
+.imageit-container{
+    display:flex;
+    flex-direction: column;
+    width:100%;
+}
+
+.imageit-pseudo-selector{
+    display:none;
+    width: calc(100% - 3rem - 2px) !important;
+    padding: .5rem 1.5rem !important;
+    background-color: rgb(121, 174, 200);
+    border: 1px solid rgb(73, 164, 209);
+    border-radius: 4px;
+    color:white;
+    text-align:center;
+    font-weight:600;
+    cursor:pointer;
+}
+
+.imageit-selector-icon{
+    height: 1.5em;
+    margin-right: 1.5em;
 }
 
 .imageit-preview{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    max-width: 100%;
+    margin: 1.5rem 0px;
+    padding: 0px .5rem;
     min-height: 75px;
 }
 
+.imageit-preview-content{
+    display:flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.imageit-clear-button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 2rem;
+    height: 2rem;
+    color: #ff3466;
+    border: 2px solid #ff3466;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.imageit-undo-button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: .5rem 1.5rem !important;
+    background-color: rgb(121, 174, 200);
+    border: 1px solid rgb(73, 164, 209);
+    border-radius: 4px;
+    cursor: pointer;
+    color: white;
+}
+
+.imageit-text-light{
+    color: #a4b7bd;
+}
+
+.imageit-inactive{
+    display: none;
+}
+
+.imageit-error{
+    width: 100%;
+    padding: 1rem 0px;
+    text-align: center;
+    color: #ff3466;
+}
+
+
+/* SCALEIT STYLES */
 .imageit-preview-text{
     flex-grow: 1;
+    flex-shrink: 100;
     padding: 0px 1rem;
 }
 
@@ -28,17 +95,22 @@
 }
 
 
+
 /* CROPPER STYLES */
-.imageit-cropper{
-    display:flex;
-    justify-content:center;
-    width:100%;
+.imageit-preview-cropit-content{
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.imageit-cropit-container{
+    width: 100%;
 }
 
 .imageit-cropper-content{
     display: flex;
     flex-direction: column;
-    max-width: 80%;
+    max-width: 100%;
     min-height: 75px;
 }
 
@@ -61,58 +133,6 @@
     cursor: pointer;
 }
 
-/* GENERAL STYLES */
-.imageit-container{
-    display:flex;
-    flex-direction: column;
-    width:100%;
-}
-
-.imageit-pseudo-selector{
-    display:none;
-    width: calc(100% - 5rem - 2px) !important;
-    padding: .5rem 1.5rem !important;
-    margin: 0px 1rem;
-    background-color: rgb(121, 174, 200);
-    border: 1px solid rgb(73, 164, 209);
-    border-radius: 4px;
-    color:white;
-    text-align:center;
-    font-weight:600;
-    cursor:pointer;
-}
-
-.imageit-selector-icon{
-    height: 1.5em;
-    margin-right: 1.5em;
-}
-
-.imageit-clear-image{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 2rem;
-    height: 2rem;
-    color: #ff3466;
-    border: 2px solid #ff3466;
-    border-radius: 50%;
-    cursor: pointer;
-}
-
-.imageit-text-light{
-    color: #a4b7bd;
-}
-
-.imageit-inactive{
-    display: none;
-}
-
-.imageit-error{
-    width: 100%;
-    padding: 1rem 0px;
-    text-align: center;
-    color: #ff3466;
-}
 
 
 
